@@ -1,0 +1,14 @@
+{$article->markRead()}
+<h2>{$article->title}</h2>
+<div>
+	<p>
+		Until today, Vippy was (still) using the CREST and XML api's.
+		These have been deprecated for a while now and CCP is shutting them down in May 2018.
+		The replacement is <a href="https://www.eveonline.com/article/introducing-esi/" target="_blank">ESI</a> and is supposed to be faster, more reliable and have more features (including write access).
+	</p>
+	<p>
+		Vippy has now switched to the new ESI api, and because of that <strong>all</strong> CREST tokens have become
+		invalid and you <strong>have to generate a new token for every character</strong> you have on Vippy.
+		You can do this in your <a href="/profile/account" target="_blank">profile</a>.
+	</p>
+</div>
