@@ -1,0 +1,18 @@
+<div class="vippy-news">
+	<h1>Vippy News</h1>
+	<div>
+	{foreach from=$news item=article}
+		<div class="vippy-news-article">
+			{include file=$article->getTemplate()}
+		</div>
+		<div style="clear: both;"></div>
+	{/foreach}
+	</div>
+	<div style="clear: both;"></div>
+</div>
+<div style="clear: both;"></div>
+<div style="text-align: center;">
+	<button type="button" onclick="destroyPopup()">
+		OK
+	</button>
+</div>
